--- a/La mentalidad popular del profesional en ingenieria.tex
+++ b/La mentalidad popular del profesional en ingenieria.tex
@@ -29,7 +29,7 @@
 \title{La mentalidad popular del profesional en ingeniería empleando la filosofía de la ciencia como forma de estimular el pensamiento científico}
 \author{\normalsize{Cesar Daniel Rincón Brito}}
 \date{\normalsize{\today}}
-\date{Junio 4, 2022}
+\date{\normalsize{Junio 4, 2022}}
 \maketitle
 
 \thispagestyle{empty}
